--- a/frontend/views/layouts/default.tpl.twig
+++ b/frontend/views/layouts/default.tpl.twig
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 {% block head %}
-{% include '@frontend/html/head.html.twig' %}
+{% include '@frontend/html/head.html.twig.twig' %}
 {% endblock %}
 </head>
 
@@ -153,7 +153,7 @@
 <!--Footer Bottom-->
 
 {%block footer%}
-{% include '@frontend/html/footer.html.twig' %}
+{% include '@frontend/html/footer.html.twig.twig' %}
 {%endblock%}
 
 </body>
